--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,62 @@
-Flask
-Flask-Bootstrap
-Flask-Login
-Flask-Migrate
-Flask-SQLAlchemy
-Flask-WTF
-Flask==3.0.3
-Jinja2==3.1.4
-MarkupSafe==3.0.1
-Werkzeug==3.0.4
+alembic==1.13.3
+annotated-types==0.7.0
+bcrypt==4.2.0
 blinker==1.8.2
+blis==1.0.1
+catalogue==2.0.10
+certifi==2024.8.30
+charset-normalizer==3.4.0
 click==8.1.7
-email-validator
+cloudpathlib==0.20.0
+confection==0.1.5
+cymem==2.0.8
+dnspython==2.7.0
+dominate==2.9.1
+email_validator==2.2.0
+Flask==3.0.3
+Flask-Bcrypt==1.0.1
+Flask-Bootstrap==3.3.7.1
+Flask-Login==0.6.3
+Flask-Migrate==4.0.7
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
+greenlet==3.1.1
+idna==3.10
 itsdangerous==2.2.0
+Jinja2==3.1.4
+langcodes==3.4.1
+language_data==1.2.0
+Mako==1.3.6
+marisa-trie==1.2.1
+markdown-it-py==3.0.0
+MarkupSafe==3.0.1
+mdurl==0.1.2
+murmurhash==1.0.10
+numpy==2.0.2
+packaging==24.1
+preshed==3.0.9
 psycopg2-binary==2.9.9
-spacy
+pydantic==2.9.2
+pydantic_core==2.23.4
+Pygments==2.18.0
+requests==2.32.3
+rich==13.9.3
+setuptools==75.2.0
+shellingham==1.5.4
+smart-open==7.0.5
+spacy==3.8.2
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+SQLAlchemy==2.0.36
+srsly==2.4.8
+thinc==8.3.2
+tqdm==4.66.5
+typer==0.12.5
+typing_extensions==4.12.2
+urllib3==2.2.3
+visitor==0.1.3
+wasabi==1.1.3
+weasel==0.4.1
+Werkzeug==3.0.4
+wrapt==1.16.0
+WTForms==3.2.1
